# vllm-uyu2

./: .gitignore  NOTICE  README.md  pyproject.toml
scripts/: serve_uyu2.sh
tests/: test_model.py
uyu2_vllm_plugin/: __init__.py  kv_cache.py  model.py
